--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,11 @@
-<h1>Landing Page</h1>
+<% include partials/header%>
 
-<p>Welcome to </p>
+
+<h1>Landing Page</h1>
+<a href="/userprofiles">View all Userprofiles</a>
+
+
+
+<p>Welcome to Elite Consorts</p>
+
+<% include partials/footer %>
