--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,6 +33,11 @@
         No Account? <a href="/userprofiles/new">Register</a>
       </p>
       </div>
+       <div class="container">
+      <p style="margin: 10px 0px 0px " >
+         <a href="/forgotpassword">Forgot Password</a>
+      </p>
+      </div>
     </div>
 
 
