--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -9,6 +9,7 @@
           <link href="https://fonts.googleapis.com/css?family=Lato|Questrial&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!--<link rel="stylesheet" type="text/css" href="/stylesheet/landing.css">-->
+      
     </head>
 <body style="font-family: 'Lato', sans-serif; color:black;" onhashchange="hashHandler();">
     <div>
@@ -16,15 +17,15 @@
     
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" style="font-size:20px; font-weight:900; color:black;" href="/userprofiles">Profile</a>
+            <a class="navbar-brand" style="font-size:20px; font-weight:900; color:grey;" href="/userprofiles">Profile</a>
         </div>
    
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" style="font-size:20px; font-weight:900; color:black;">
+            <li><a href="" style="font-size:20px; font-weight:900; color:grey;">
                LoggedIn
             </a></li>
-            <li><a href="/logout" style="font-size:20px; font-weight:900; color:black;">
+            <li><a href="/logout" style="font-size:20px; font-weight:900; color:grey;">
               LogOut
             </a></li>
         </ul>
