--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -40,8 +40,9 @@
           });
 
           if (result.success) {
-            $('#checkout-message').html('<h1>Success</h1><p> Check your <a href="https://sandbox.braintreegateway.com/login">sandbox Control Panel</a> for your test transactions.</p><p>Refresh to try another transaction.</p>');
             
+            $('#checkout-message').html('<h1>Success</h1><p> Check your <a href="https://sandbox.braintreegateway.com/login">sandbox Control Panel</a> for your test transactions.</p><p>Refresh to try another transaction.</p>');
+            window.location = '/userprofiles';
           } else {
             console.log(result);
             $('#checkout-message').html('<h1>Error</h1><p>Payment not accepted</p>');
