--- a/views/show.ejs
+++ b/views/show.ejs
@@ -66,10 +66,23 @@
          </div>
 </div>
 
-  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
- <script>
-window.onpopstate = function(event) {
-  console.log("location: " + document.location + ", state: " + JSON.stringify(event.state));
-};
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
+        
+<script>
+var count = 0; // needed for safari
+window.onload = function () { 
+    if (typeof history.pushState === "function") { 
+        history.pushState("back", null, null);          
+        window.onpopstate = function () { 
+            history.pushState('back', null, null);              
+             if(count == 1){window.location = '/userprofiles';}
+            console.log('back')
+         }; 
+     }
+ }  
+setTimeout(function(){count = 1;},200);
+
 </script>
 </body>
+</html>
