--- a/views/userprofiles.ejs
+++ b/views/userprofiles.ejs
@@ -196,4 +196,14 @@
 
     <% include partials/footer %>
     
-    
+      <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script>
+        
+        
+        
+        
+        
+        
+        
+        
+    </script>
