--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -116,9 +116,10 @@ navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia 
     navigator.getUserMedia({video: true, audio: true}, function(stream) {
       call.answer(stream); // Answer the call with an A/V stream.
       call.on('stream', function(remoteStream) {
-        answer.style.display="block";
-        answer.onclick(function(){  video.srcObject=remoteStream;})
-      
+        $("#videoicon").style("background-color:red;");
+        // answer.style.display="block";
+       // answer.onclick(function(){  video.srcObject=remoteStream;})
+      video.srcObject=remoteStream;
        
       });
     }, function(err) {
