--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -79,6 +79,7 @@
   var video= document.getElementById('video')
   var video2= document.getElementById('video2')
   var answer= document.getElementById('answer')
+    var videoicon= document.getElementById('videoicon')
 
  var peer = new Peer(vid_room)
 
@@ -100,10 +101,10 @@
     
 navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
   navigator.getUserMedia({video: true, audio: true}, function(stream) {
-    video.srcObject=stream;
+   
     var call = peer.call(call_room, stream);
     call.on('stream', function(remoteStream) {
-      video2.srcObject=remoteStream;
+      // video2.srcObject=remoteStream;
       
 
     });
@@ -115,11 +116,14 @@ navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia 
   peer.on('call', function(call) {
     navigator.getUserMedia({video: true, audio: true}, function(stream) {
       call.answer(stream); // Answer the call with an A/V stream.
+      video2.srcObject=stream;
       call.on('stream', function(remoteStream) {
-        $("#videoicon").style("background-color:red;");
         // answer.style.display="block";
-       // answer.onclick(function(){  video.srcObject=remoteStream;})
-      video.srcObject=remoteStream;
+        videoicon.style.color="red";
+         video.srcObject=remoteStream
+    
+        // answer.onclick(function(){  video.srcObject=remoteStream;})
+      
        
       });
     }, function(err) {
