--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -90,11 +90,14 @@
       // here you have conn.id
       console.log('made it here');
       conn.send('hi!');
+      
+      videoicon.style.backgroundColor = "red";
     });
 
     peer.on('connection', function(conn) {
       conn.on('data', function(data){
         // Will print 'hi!'
+            videoicon.style.backgroundColor = "red";
         console.log(data);
       });
     });
@@ -102,11 +105,11 @@
 navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
   navigator.getUserMedia({video: true, audio: true}, function(stream) {
    
+    //  videoicon.style.backgroundColor = "red";
     var call = peer.call(call_room, stream);
     video.srcObject=stream;
     call.on('stream', function(remoteStream) {
       
-      videoicon.style.backgroundColor = "red";
        video2.srcObject=remoteStream;
       
 
@@ -119,10 +122,11 @@ navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia 
   peer.on('call', function(call) {
     navigator.getUserMedia({video: true, audio: true}, function(stream) {
       call.answer(stream); // Answer the call with an A/V stream.
+         // videoicon.style.backgroundColor = "red";
       video2.srcObject=stream;
       call.on('stream', function(remoteStream) {
         // answer.style.display="block";
-        videoicon.style.backgroundColor = "red";
+    
          video.srcObject=remoteStream
     
         // answer.onclick(function(){  video.srcObject=remoteStream;})
