--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -64,75 +64,83 @@
     <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
+  
 
-//   function func(){
-    
-//   var name = JSON.parse($('#n').text());
-//   var socket = io('',{query: 'room='+name});
-//   var user = JSON.parse($('#u').text());
-//   var id = JSON.parse($('#j').text());
-//     var otheruser = JSON.parse($('#o').text());
-//     var call_room = name+otheruser;
-//   var vid_room= name+id;
+  function func(){
+    var socket ;
+  var name = JSON.parse($('#n').text());
+ socket= io('',{query: 'room='+name});
+  var user = JSON.parse($('#u').text());
+  var id = JSON.parse($('#j').text());
+    var otheruser = JSON.parse($('#o').text());
+    var call_room = name+otheruser;
+  var vid_room= name+id;
  
-//   var video= document.getElementById('video')
-//   var video2= document.getElementById('video2')
-//   var answer= document.getElementById('answer')
-//     var videoicon= document.getElementById('videoicon')
+  var video= document.getElementById('video')
+  var video2= document.getElementById('video2')
+  var answer= document.getElementById('answer')
+    var videoicon= document.getElementById('videoicon')
 
-// var peer = new Peer(vid_room)
 
-//     var conn = peer.connect(call_room);
-//     // on open will be launch when you successfully connect to PeerServer
-//     conn.on('open', function(err){
-//       if (err) console.log(err);
-//       // here you have conn.id
-//       console.log('made it here');
-//       conn.send('hi!');
-      
-      
-//       videoicon.style.backgroundColor = "red";
-//     });
+var peer = new Peer(vid_room)
 
-//     peer.on('connection', function(conn) {
-//       conn.on('data', function(data){
-//         // Will print 'hi!'
-//             videoicon.style.backgroundColor = "red";
-//         console.log(data);
-//       });
-//     });
+    var conn = peer.connect(call_room);
     
-// navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-//   navigator.getUserMedia({video: true, audio: true}, function(stream) {
-//     var call = peer.call(call_room, stream);
-//     call.on('stream', function(remoteStream) {
-//       video.srcObject=remoteStream;
-// videoicon.style.backgroundColor = "red";
-   
-//     });
-//   }, function(err) {
-//     console.log('Failed to get local stream' ,err);
-//   });
+    
+      socket.on('video', function(){
+        console.log("video icon clicked");
+      }
+    );
+    // on open will be launch when you successfully connect to PeerServer
+    conn.on('open', function(err){
+      if (err) console.log(err);
+      // here you have conn.id
+      console.log('made it here');
+      conn.send('hi!');
+           socket.emit('video', name);
+      
+      videoicon.style.backgroundColor = "red";
+    });
 
-//   navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-//   peer.on('call', function(call) {
-//     navigator.getUserMedia({video: true, audio: true}, function(stream) {
-//       call.answer(stream); // Answer the call with an A/V stream.
-//       call.on('stream', function(remoteStream) {
-//         video.srcObject=remoteStream;
-//         videoicon.style.backgroundColor = "red";
-//       });
-//     }, function(err) {
-//       console.log('Failed to get local stream' ,err);
-//     });
-//   });
+    peer.on('connection', function(conn) {
+      conn.on('data', function(data){
+        // Will print 'hi!'
+            videoicon.style.backgroundColor = "red";
+        console.log(data);
+      });
+    });
+    
+navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+  navigator.getUserMedia({video: true, audio: true}, function(stream) {
+    var call = peer.call(call_room, stream);
+    call.on('stream', function(remoteStream) {
+      video.srcObject=remoteStream;
+videoicon.style.backgroundColor = "red";
+   
+    });
+  }, function(err) {
+    console.log('Failed to get local stream' ,err);
+  });
+
+  navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+  peer.on('call', function(call) {
+    navigator.getUserMedia({video: true, audio: true}, function(stream) {
+      call.answer(stream); // Answer the call with an A/V stream.
+      call.on('stream', function(remoteStream) {
+        video.srcObject=remoteStream;
+        videoicon.style.backgroundColor = "red";
+      });
+    }, function(err) {
+      console.log('Failed to get local stream' ,err);
+    });
+  });
   
   
      
-  // }
+  }
     $(function () {
        var name = JSON.parse($('#n').text());
-      var socket = io('',{query: 'room='+name});
+      var socket1 = io('',{query: 'room='+name});
         var user = JSON.parse($('#u').text());;
           var datetime
      
@@ -141,8 +149,8 @@
       datetime=new Date().toLocaleString().split(',').join("");
         var arr=[$('#m').val(), name,user,datetime];
         var msg= $('#m').val()
-        socket.emit('chat message', arr);
-        socket.emit('room', name);
+        socket1.emit('chat message', arr);
+        socket1.emit('room', name);
     
         $('#m').val('');
         return false;
