--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -45,7 +45,7 @@
           </span>
               <%=msg.message%>  
                <!--<%=msg.handle%>-->
-            <div ><p><%=msg.timestamp%></p></div>    
+            <div ><h5><%=msg.timestamp%></h5></div>    
         </li>
      
         
@@ -64,7 +64,8 @@
     <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
-
+var objDiv = document.getElementById(".scrollview");
+objDiv.scrollTop = objDiv.scrollHeight;
 //   function func(){
     
 //   var name = JSON.parse($('#n').text());
@@ -130,6 +131,7 @@
   
      
   // }
+  
     $(function () {
        var name = JSON.parse($('#n').text());
       var socket = io('',{query: 'room='+name});
@@ -150,7 +152,7 @@
       socket.on('chat message', function(msg){
         // $( "#nm" ).remove();
         var date=new Date().toLocaleString().split(',').join("");
-        var txt = '<li   class="ui large header">'+ msg[2]+  ": " + msg[0] + '<div id="date"><p>'+date + "</p></div>" +"</li>"
+        var txt = '<li   class="ui large header">'+ msg[2]+  " : " + msg[0] + '<div id="date"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
