--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -45,7 +45,7 @@
           </span>
               <%=msg.message%>  
                <!--<%=msg.handle%>-->
-            <div ><h5><%=msg.timestamp%></h5></div>    
+            <div style="text-align: left;"><h5><%=msg.timestamp%></h5></div>    
         </li>
      
         
@@ -64,8 +64,7 @@
     <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
-var objDiv = document.getElementById(".scrollview");
-objDiv.scrollTop = objDiv.scrollHeight;
+
 //   function func(){
     
 //   var name = JSON.parse($('#n').text());
@@ -152,7 +151,7 @@ objDiv.scrollTop = objDiv.scrollHeight;
       socket.on('chat message', function(msg){
         // $( "#nm" ).remove();
         var date=new Date().toLocaleString().split(',').join("");
-        var txt = '<li   class="ui large header">'+ msg[2]+  " : " + msg[0] + '<div id="date"><h5>'+date + "</h5></div>" +"</li>"
+        var txt = '<li   class="ui large header">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="text-align: left;"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
