--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -45,7 +45,7 @@
           </span>
               <%=msg.message%>  
                <!--<%=msg.handle%>-->
-            <div style="text-align: left;"><h5><%=msg.timestamp%></h5></div>    
+            <div style="text-align: right;"><h5><%=msg.timestamp%></h5></div>    
         </li>
      
         
@@ -151,7 +151,7 @@
       socket.on('chat message', function(msg){
         // $( "#nm" ).remove();
         var date=new Date().toLocaleString().split(',').join("");
-        var txt = '<li   class="ui large header">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="text-align: left;"><h5>'+date + "</h5></div>" +"</li>"
+        var txt = '<li   class="ui large header">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="text-align: right;"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
