--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,7 +10,7 @@
       form input { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #video{ background: rgb(0, 0, 0); border: none; padding: 10px;margin: 0px 0px 10px 50px;  }
-      .scrollview{width: 100px;
+      .scrollview{width: 100%;
   
     padding: 20px;height: 400px;overflow-y: scroll;      }
          #video2{ background: white; border: none; padding: 0px; margin: 0px 0px 10px 500px; }
